src/lib/snapshots/cviz__snapshot_tests__tests__long_chain_ascii_default.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&long_chain_graph(), &GraphRenderOpts::default(), false)"
---
╞══ consumer ════════════════════════════════════════

                 ┌─────────┐              ┌─────────┐              ┌─────────┐
 ext:consumer ──▶│ gateway │───consumer──▶│ service │───consumer──▶│ backend │
                 └─────────┘              └─────────┘              └─────────┘
