src/lib/snapshots/cviz__snapshot_tests__tests__long_chain_ascii_handler_chain.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 100
expression: "ascii_snap(&long_chain_graph(), DetailLevel::HandlerChain, false)"
---
┌───────────────────────────────────┐
│          Service Chains           │
├───────────────────────────────────┤
│[Export: consumer] ──> gateway     │
│gateway ── consumer ──> service    │
│service ── consumer ──> backend    │
└───────────────────────────────────┘
