src/lib/snapshots/cviz__snapshot_tests__tests__long_chain_mermaid_all_interfaces.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 168
expression: "mermaid_snap(&long_chain_graph(), DetailLevel::AllInterfaces, false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph host["Host Imports"]
        wasi_messaging_consumer_0_2_0["consumer"]
    end

    subgraph composition["Component Instances"]
        backend["backend"]
        service["service"]
        gateway["gateway"]
    end

    wasi_messaging_consumer_0_2_0 -.->|"consumer"| backend
    backend -->|"consumer"| service
    service -->|"consumer"| gateway

    gateway --> export_wasi_messaging_consumer_0_2_0(["Export: consumer"])
