src/lib/snapshots/cviz__snapshot_tests__tests__long_chain_mermaid_default.snap
---
source: src/lib/snapshot_tests.rs
expression: "mermaid_snap(&long_chain_graph(), &GraphRenderOpts::default(), false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    classDef shared stroke-width:3px,stroke-dasharray:5 3

    subgraph sg_wasi_messaging_consumer_0_2_0["export: consumer"]
        n1["backend"]
        n2["service"]
        n3["gateway"]
        ext_wasi_messaging_consumer_0_2_0(["ext: consumer"]) --> n3
        n2 -->|"consumer"| n1
        n3 -->|"consumer"| n2
    end
