src/lib/snapshots/cviz__snapshot_tests__tests__long_chain_mermaid_handler_chain.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 159
expression: "mermaid_snap(&long_chain_graph(), DetailLevel::HandlerChain, false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph composition["Service Chains"]
        gateway["gateway"]
        service["service"]
        backend["backend"]
    end

    export_wasi_messaging_consumer_0_2_0(["Export: consumer"]) --> gateway
    gateway -->|"consumer"| service
    service -->|"consumer"| backend
