src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_all_interfaces.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 37
expression: "ascii_snap(&simple_chain_graph(), DetailLevel::AllInterfaces, false)"
---
┌──────────────────┐
│   Host Imports   │
├──────────────────┤
│  {handler}       │
│  {log}           │
└──────────────────┘
┌─────────────────────────┐
│   Component Instances   │
├─────────────────────────┤
│  [srv]                  │
│  [middleware]           │
└─────────────────────────┘
┌────────────────────────────────────────┐
│              Connections               │
├────────────────────────────────────────┤
│  {handler} --- handler --- [srv]       │
│  [srv] ── handler ──> [middleware]     │
│  {log} --- log --- [middleware]        │
│  [middleware] ──> (Export: handler)    │
└────────────────────────────────────────┘
