src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_chain_only.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&simple_chain_graph(), &chain_only(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘
