src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_default.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&simple_chain_graph(), &GraphRenderOpts::default(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘
