src/lib/snapshots/cviz__snapshot_tests__tests__simple_chain_ascii_full.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 42
expression: "ascii_snap(&simple_chain_graph(), DetailLevel::Full, false)"
---
┌───────────────────────────┐
│       All Instances       │
├───────────────────────────┤
│  [srv] [comp:0]           │
│  [middleware] [comp:1]    │
└───────────────────────────┘
┌────────────────────────────────────────────────────────┐
│                      Connections                       │
├────────────────────────────────────────────────────────┤
│  [srv] ── wasi:http/handler@0.3.0 ──> [middleware]     │
│  [middleware] ──> (Export: wasi:http/handler@0.3.0)    │
└────────────────────────────────────────────────────────┘
